--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!----------------------------------------  Begin navigation  ---------------------------------------->
     <div class="container">
       <nav class="navbar">
+        <input type="checkbox" id="nav-check">
         <div class="navbar-brand">
           <img class="logo" src="./img/logo.png" alt="logo" />
         </div>
@@ -35,69 +36,77 @@
           </li>
         </ul>
         <!----------------------------------------  hamburger  ---------------------------------------->
-        <div class="menu-toggle">
-          <div class="hamburger">
-            <span> </span>
-          </div>
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
         </div>
         <!----------------------------------------  hamburger end  ---------------------------------------->
       </nav>
-      <!----------------------------------------  End navigation  ---------------------------------------->
+    </div>
+    <!----------------------------------------  End navigation  ---------------------------------------->
 
-      <!----------------------------------------  Begin content  ---------------------------------------->
-      <div class="content">
-        <!----------------------------------------  Begin API  ---------------------------------------->
-        <div class="API">
-          <div class="api1">nieuws</div>
-          <div class="api2">community</div>
-          <div class="api3">bijeenkomsten</div>
+    <!----------------------------------------  Begin content  ---------------------------------------->
+    <div class="content">
+      <!----------------------------------------  Begin API  ---------------------------------------->
+      <div class="API">
+        <div class="api1">nieuws
+          <script src="js/news.js"></script>
         </div>
-        <!----------------------------------------  End API  ---------------------------------------->
-
-        <!----------------------------------------  Begin about  ---------------------------------------->
-        <div class="About">
-          <!----------------------------------------  Begin Text-about  ---------------------------------------->
-          <div class="Text">
-            <h2>About</h2>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec
-            tempor orci. Sed tincidunt lacinia tempor. Mauris vulputate ultrices
-            felis ut gravida. Proin volutpat, dui vitae hendrerit rutrum, ex
-            dolor tincidunt nibh, commodo pellentesque mi quam non massa. Mauris
-            at blandit est, et pellentesque ante. Praesent vel gravida lorem, et
-            rutrum ligula. Quisque eu egestas odio, id gravida nisl. Morbi
-            pulvinar consequat mi non sodales. Vivamus fringilla non eros in
-            dapibus. Cras vestibulum ligula feugiat velit pretium, nec elementum
-            nulla lobortis. Vivamus congue mauris efficitur semper volutpat.
-            Mauris lobortis vestibulum felis sit amet pellentesque. Orci varius
-            natoque penatibus et magnis dis parturient montes, nascetur
-            ridiculus mus. Donec euismod sodales tortor, id scelerisque magna
-            vulputate a. Praesent a imperdiet quam. Vivamus ac finibus orci, ac
-            porta sem. Sed non viverra neque.
-          </div>
-          <!----------------------------------------  Begin Image-about  ---------------------------------------->
-          <img class="img-about" src="img/img_about.png" alt="Image about" />
+        <div class="api2">community
+          <script src="js/community.js"></script>
         </div>
-        <!----------------------------------------  End about  ---------------------------------------->
-
-        <!----------------------------------------  End Content  ---------------------------------------->
-
-        <!----------------------------------------  Start footer  ---------------------------------------->
-        <footer class="footer">
-            <div class="social-media">
-              <h3>Social media</h3>
-            </div>
-            <div class="contact-footer">
-              <h3>Contact</h3>
-            </div>
-            <div class="locatie">
-              <h3>Locatie</h3>
-            </div>
-            <div class="links">
-              <h3>Links</h3>
-            </div>
-        </footer>
-        <div class="content">
+        <div class="api3">bijeenkomsten
+          <script src="js/bijeenkomsten.js"></script>
+        </div>
       </div>
+      <!----------------------------------------  End API  ---------------------------------------->
+
+      <!----------------------------------------  Begin about  ---------------------------------------->
+      <div class="About">
+        <!----------------------------------------  Begin Text-about  ---------------------------------------->
+        <div class="Text">
+          <h2>About</h2>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec
+          tempor orci. Sed tincidunt lacinia tempor. Mauris vulputate ultrices
+          felis ut gravida. Proin volutpat, dui vitae hendrerit rutrum, ex dolor
+          tincidunt nibh, commodo pellentesque mi quam non massa. Mauris at
+          blandit est, et pellentesque ante. Praesent vel gravida lorem, et
+          rutrum ligula. Quisque eu egestas odio, id gravida nisl. Morbi
+          pulvinar consequat mi non sodales. Vivamus fringilla non eros in
+          dapibus. Cras vestibulum ligula feugiat velit pretium, nec elementum
+          nulla lobortis. Vivamus congue mauris efficitur semper volutpat.
+          Mauris lobortis vestibulum felis sit amet pellentesque. Orci varius
+          natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+          mus. Donec euismod sodales tortor, id scelerisque magna vulputate a.
+          Praesent a imperdiet quam. Vivamus ac finibus orci, ac porta sem. Sed
+          non viverra neque.
+        </div>
+        <!----------------------------------------  Begin Image-about  ---------------------------------------->
+        <img class="img-about" src="img/img_about.png" alt="Image about" />
+      </div>
+      <!----------------------------------------  End about  ---------------------------------------->
+
+      <!----------------------------------------  End Content  ---------------------------------------->
+
+      <!----------------------------------------  Start footer  ---------------------------------------->
+      <footer class="footer">
+        <div class="social-media">
+          <h3>Social media</h3>
+        </div>
+        <div class="contact-footer">
+          <h3>Contact</h3>
+        </div>
+        <div class="locatie">
+          <h3>Locatie</h3>
+        </div>
+        <div class="links">
+          <h3>Links</h3>
+        </div>
+      </footer>
+      <div class="content"></div>
     </div>
   </body>
 </html>
