--- a/contact.html
+++ b/contact.html
@@ -11,32 +11,42 @@
     <!----------------------------------------  Begin navigation  ---------------------------------------->
     <div class="container">
         <nav class="navbar">
-            <ul>
-                <img class="logo" src="./img/logo.png" alt="logo" />
-                <li>
-                    <a class="link home" href="./index.html">Home</a>
-                </li>
-                <li>
-                    <a class="link leden" href="#">Leden</a>
-                </li>
-                <li>
-                    <a class="link nieuws" href="#">Nieuws</a>
-                </li>
-                <li>
-                    <a class="link about" href="#">About</a>
-                </li>
-                <li class="active">
-                    <a class="link contact " href="./html/contact.html">Contact</a>
-                </li>
-                <li>
-                    <a class="link word_lid" href="#">Word lid</a>
-                </li>
-                <li>
-                    <a class="link login" href="#">Login</a>
-                </li>
-            </ul>
+          <input type="checkbox" id="nav-check">
+          <div class="navbar-brand">
+            <img class="logo" src="./img/logo.png" alt="logo" />
+          </div>
+          <ul>
+            <li><a class="link home" href="./index.html">Home</a></li>
+            <li>
+              <a class="link leden" href="#">Leden</a>
+            </li>
+            <li>
+              <a class="link nieuws" href="#">Nieuws</a>
+            </li>
+            <li>
+              <a class="link about" href="#">About</a>
+            </li>
+            <li class="active">
+              <a class="link contact" href="./contact.html">Contact</a>
+            </li>
+            <li>
+              <a class="link word_lid" href="#">Word lid</a>
+            </li>
+            <li>
+              <a class="link login" href="#">Login</a>
+            </li>
+          </ul>
+          <!----------------------------------------  hamburger  ---------------------------------------->
+          <div class="nav-btn">
+            <label for="nav-check">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
+          </div>
+          <!----------------------------------------  hamburger end  ---------------------------------------->
         </nav>
-    </div>
+      </div>
     <!----------------------------------------  End navigation  ---------------------------------------->
 
     <!----------------------------------------  Begin content  ---------------------------------------->
