--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <script src="js/news.js"></script>
         </div>
         <div class="api2">community
-          <script src="js/community.js"></script>
+          <script src="js/community-customers.js"></script>
         </div>
         <div class="api3">bijeenkomsten
           <script src="js/bijeenkomsten.js"></script>
@@ -106,7 +106,6 @@
           <h3>Links</h3>
         </div>
       </footer>
-      <div class="content"></div>
     </div>
   </body>
 </html>
