--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
           <img class="logo" src="./img/logo.png" alt="logo" />
         </div>
         <ul>
-          <li class="active"><a class="link home" href="#">Home</a></li>
+          <li class="active"><a class="link home" href="./index.html">Home</a></li>
           <li>
             <a class="link leden" href="#">Leden</a>
           </li>
@@ -23,7 +23,7 @@
             <a class="link nieuws" href="#">Nieuws</a>
           </li>
           <li>
-            <a class="link about" href="about.html">About</a>
+            <a class="link about" href="./about.html">About</a>
           </li>
           <li>
             <a class="link contact" href="./contact.html">Contact</a>
@@ -50,22 +50,8 @@
 
     <!----------------------------------------  Begin content  ---------------------------------------->
     <div class="content">
-      <!----------------------------------------  Begin API  ---------------------------------------->
-      <div class="API">
-        <div class="api1">nieuws
-          <script src="js/news.js"></script>
-        </div>
-        <div class="api2">community
-          <script src="js/community-customers.js"></script>
-        </div>
-        <div class="api3">bijeenkomsten
-          <script src="js/bijeenkomsten.js"></script>
-        </div>
-      </div>
-      <!----------------------------------------  End API  ---------------------------------------->
-
       <!----------------------------------------  Begin about  ---------------------------------------->
-      <div class="About">
+      <div class="About1">
         <!----------------------------------------  Begin Text-about  ---------------------------------------->
         <div class="Text">
           <h2>About</h2>
