--- a/leden.html
+++ b/leden.html
@@ -20,7 +20,7 @@
             <a class="link leden" href="leden.html">Leden</a>
           </li>
           <li>
-            <a class="link nieuws" href="nieuws.html">Nieuws</a>
+            <a class="link nieuws" href="#">Nieuws</a>
           </li>
           <li>
             <a class="link about" href="about.html">About</a>
@@ -29,10 +29,10 @@
             <a class="link contact" href="./contact.html">Contact</a>
           </li>
           <li>
-            <a class="link word_lid" href="word_lid.html">Word lid</a>
+            <a class="link word_lid" href="#">Word lid</a>
           </li>
           <li>
-            <a class="link login" href="login.html">Login</a>
+            <a class="link login" href="#">Login</a>
           </li>
         </ul>
         <!----------------------------------------  hamburger  ---------------------------------------->
@@ -50,33 +50,8 @@
 
     <!----------------------------------------  Begin content  ---------------------------------------->
     <div class="content">
-      <!----------------------------------------  Begin about  ---------------------------------------->
-      <div class="About1">
-        <!----------------------------------------  Begin Text-about  ---------------------------------------->
-        <div class="Text">
-          <h2>About</h2>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec
-          tempor orci. Sed tincidunt lacinia tempor. Mauris vulputate ultrices
-          felis ut gravida. Proin volutpat, dui vitae hendrerit rutrum, ex dolor
-          tincidunt nibh, commodo pellentesque mi quam non massa. Mauris at
-          blandit est, et pellentesque ante. Praesent vel gravida lorem, et
-          rutrum ligula. Quisque eu egestas odio, id gravida nisl. Morbi
-          pulvinar consequat mi non sodales. Vivamus fringilla non eros in
-          dapibus. Cras vestibulum ligula feugiat velit pretium, nec elementum
-          nulla lobortis. Vivamus congue mauris efficitur semper volutpat.
-          Mauris lobortis vestibulum felis sit amet pellentesque. Orci varius
-          natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-          mus. Donec euismod sodales tortor, id scelerisque magna vulputate a.
-          Praesent a imperdiet quam. Vivamus ac finibus orci, ac porta sem. Sed
-          non viverra neque.
-        </div>
-        <!----------------------------------------  Begin Image-about  ---------------------------------------->
-        <img class="img-about" src="img/img_about.png" alt="Image about" />
-      </div>
-      <!----------------------------------------  End about  ---------------------------------------->
-
       <!----------------------------------------  End Content  ---------------------------------------->
-
+      </div>
       <!----------------------------------------  Start footer  ---------------------------------------->
       <footer class="footer">
         <div class="social-media">
