--- a/contact.html
+++ b/contact.html
@@ -16,24 +16,24 @@
             <img class="logo" src="./img/logo.png" alt="logo" />
           </div>
           <ul>
-            <li><a class="link home" href="./index.html">Home</a></li>
+            <li class="active"><a class="link home" href="index.html">Home</a></li>
             <li>
-              <a class="link leden" href="#">Leden</a>
+              <a class="link leden" href="leden.html">Leden</a>
             </li>
             <li>
-              <a class="link nieuws" href="#">Nieuws</a>
+              <a class="link nieuws" href="nieuws.html">Nieuws</a>
             </li>
             <li>
-              <a class="link about" href="#">About</a>
+              <a class="link about" href="about.html">About</a>
             </li>
-            <li class="active">
+            <li>
               <a class="link contact" href="./contact.html">Contact</a>
             </li>
             <li>
-              <a class="link word_lid" href="#">Word lid</a>
+              <a class="link word_lid" href="word_lid.html">Word lid</a>
             </li>
             <li>
-              <a class="link login" href="#">Login</a>
+              <a class="link login" href="login.html">Login</a>
             </li>
           </ul>
           <!----------------------------------------  hamburger  ---------------------------------------->
