--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
           <img class="logo" src="./img/logo.png" alt="logo" />
         </div>
         <ul>
-          <li class="active"><a class="link home" href="index.html">Home</a></li>
+          <li><a class="link home" href="index.html">Home</a></li>
           <li>
             <a class="link leden" href="leden.html">Leden</a>
           </li>
@@ -31,7 +31,7 @@
           <li>
             <a class="link word_lid" href="word_lid.html">Word lid</a>
           </li>
-          <li>
+          <li class="active">
             <a class="link login" href="login.html">Login</a>
           </li>
         </ul>
