--- a/leden.html
+++ b/leden.html
@@ -15,8 +15,8 @@
           <img class="logo" src="./img/logo.png" alt="logo" />
         </div>
         <ul>
-          <li class="active"><a class="link home" href="index.html">Home</a></li>
-          <li>
+          <li><a class="link home" href="index.html">Home</a></li>
+          <li class="active">
             <a class="link leden" href="leden.html">Leden</a>
           </li>
           <li>
@@ -50,23 +50,23 @@
 
     <!----------------------------------------  Begin content  ---------------------------------------->
     <div class="content">
+      
       <!----------------------------------------  End Content  ---------------------------------------->
+    </div>  
+    <!----------------------------------------  Start footer  ---------------------------------------->
+    <footer class="footer">
+      <div class="social-media">
+        <h3>Social media</h3>
       </div>
-      <!----------------------------------------  Start footer  ---------------------------------------->
-      <footer class="footer">
-        <div class="social-media">
-          <h3>Social media</h3>
-        </div>
-        <div class="contact-footer">
-          <h3>Contact</h3>
-        </div>
-        <div class="locatie">
-          <h3>Locatie</h3>
-        </div>
-        <div class="links">
-          <h3>Links</h3>
-        </div>
-      </footer>
-    </div>
+      <div class="contact-footer">
+        <h3>Contact</h3>
+      </div>
+      <div class="locatie">
+        <h3>Locatie</h3>
+      </div>
+      <div class="links">
+        <h3>Links</h3>
+      </div>
+    </footer>
   </body>
 </html>
