--- a/word_lid.html
+++ b/word_lid.html
@@ -15,7 +15,7 @@
           <img class="logo" src="./img/logo.png" alt="logo" />
         </div>
         <ul>
-          <li class="active"><a class="link home" href="index.html">Home</a></li>
+          <li><a class="link home" href="index.html">Home</a></li>
           <li>
             <a class="link leden" href="leden.html">Leden</a>
           </li>
@@ -28,7 +28,7 @@
           <li>
             <a class="link contact" href="./contact.html">Contact</a>
           </li>
-          <li>
+          <li class="active">
             <a class="link word_lid" href="word_lid.html">Word lid</a>
           </li>
           <li>
