--- a/leden.html
+++ b/leden.html
@@ -1,58 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Regitel</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
 
-  <body>
-    <!----------------------------------------  Begin navigation  ---------------------------------------->
-    <div class="container">
-      <nav class="navbar">
-        <input type="checkbox" id="nav-check">
-        <div class="navbar-brand">
-          <img class="logo" src="./img/logo.png" alt="logo" />
-        </div>
-        <ul>
-          <li><a class="link home" href="index.html">Home</a></li>
-          <li class="active">
-            <a class="link leden" href="leden.html">Leden</a>
-          </li>
-          <li>
-            <a class="link nieuws" href="#">Nieuws</a>
-          </li>
-          <li>
-            <a class="link about" href="about.html">About</a>
-          </li>
-          <li>
-            <a class="link contact" href="./contact.html">Contact</a>
-          </li>
-          <li>
-            <a class="link word_lid" href="#">Word lid</a>
-          </li>
-          <li>
-            <a class="link login" href="#">Login</a>
-          </li>
-        </ul>
-        <!----------------------------------------  hamburger  ---------------------------------------->
-        <div class="nav-btn">
-          <label for="nav-check">
-            <span></span>
-            <span></span>
-            <span></span>
-          </label>
-        </div>
-        <!----------------------------------------  hamburger end  ---------------------------------------->
-      </nav>
-    </div>
-    <!----------------------------------------  End navigation  ---------------------------------------->
+<head>
+  <meta charset="utf-8" />
+  <title>Leden</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-    <!----------------------------------------  Begin content  ---------------------------------------->
-    <div class="content">
-      
+<body>
+  <!----------------------------------------  Begin navigation  ---------------------------------------->
+  <div class="container">
+    <nav class="navbar">
+      <input type="checkbox" id="nav-check">
+      <div class="navbar-brand">
+        <img class="logo" src="./img/logo.png" alt="logo" />
+      </div>
+      <ul>
+        <li><a class="link home" href="index.html">Home</a></li>
+        <li class="active">
+          <a class="link leden" href="leden.html">Leden</a>
+        </li>
+        <li>
+          <a class="link nieuws" href="nieuws.html">Nieuws</a>
+        </li>
+        <li>
+          <a class="link about" href="about.html">About</a>
+        </li>
+        <li>
+          <a class="link contact" href="./contact.html">Contact</a>
+        </li>
+        <li>
+          <a class="link word_lid" href="word_lid.html">Word lid</a>
+        </li>
+        <li>
+          <a class="link login" href="login.html">Login</a>
+        </li>
+      </ul>
+      <!----------------------------------------  hamburger  ---------------------------------------->
+      <div class="nav-btn">
+        <label for="nav-check">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
+      <!----------------------------------------  hamburger end  ---------------------------------------->
+    </nav>
+  </div>
+  <!----------------------------------------  End navigation  ---------------------------------------->
+
+  <!----------------------------------------  Begin content  ---------------------------------------->
+  <div class="content">
+    <!----------------------------------------  Begin contact  ---------------------------------------->
+    <div class="contact">
+      <!----------------------------------------  Begin Text-contact  ---------------------------------------->
+
+
       <!----------------------------------------  End Content  ---------------------------------------->
-    </div>  
+    </div>
     <!----------------------------------------  Start footer  ---------------------------------------->
     <footer class="footer">
       <div class="social-media">
@@ -68,5 +73,6 @@
         <h3>Links</h3>
       </div>
     </footer>
-  </body>
+</body>
+
 </html>
