--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>Contact us</title>
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 
 <body>
@@ -50,14 +53,29 @@
   <!----------------------------------------  End navigation  ---------------------------------------->
 
   <!----------------------------------------  Begin content  ---------------------------------------->
-  <div class="content">
-    <!----------------------------------------  Begin contact  ---------------------------------------->
-    <div class="contact">
-      <!----------------------------------------  Begin Text-contact  ---------------------------------------->
+  
 
+    <!--Begin containercontact-->
+    <div class="containercontact">
 
-      <!----------------------------------------  End Content  ---------------------------------------->
+      <!--Begin context-box-->
+      <div class="context-box">
+        <div class="left"></div>
+        <div class="right">
+          <h2>Contact us</h2>
+          <input type="text" class="field" placeholder="Your Name">
+          <input type="email" class="field" placeholder="Your Email">
+          <input type="text" class="field" placeholder="Your Phone">
+          <textarea placeholder="Message" class="field area"></textarea>
+          <button class="btncontact">Verstuur</button>
+        </div>          
+
+      <!--End context-box-->
+      </div>
+      <!--End container-->
     </div>
+    <!--End content-->
+    
     <!----------------------------------------  Start footer  ---------------------------------------->
     <footer class="footer">
       <div class="social-media">
