styling about was fed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="About">
         <!----------------------------------------  Begin Text-about  ---------------------------------------->
         <div class="Text">
-          <h2>About</h2>
+          <h2 class="about">About</h2>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec
           tempor orci. Sed tincidunt lacinia tempor. Mauris vulputate ultrices
           felis ut gravida. Proin volutpat, dui vitae hendrerit rutrum, ex dolor
