--- a/leden.html
+++ b/leden.html
@@ -56,6 +56,26 @@
     <div class="contact">
       <!----------------------------------------  Begin Text-contact  ---------------------------------------->
 
+      <div class=”gallery”>
+        <figure class="gallery__item gallery__item--1">
+          <img src="img/logo.png" class="gallery__img" alt="Image 1">
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+          <img src="img/logo.png" class="gallery__img" alt="Image 2">
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+          <img src="img/logo.png" class="gallery__img" alt="Image 3">
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+          <img src="img/logo.png" class="gallery__img" alt="Image 4">
+        </figure>
+        <figure class="gallery__item gallery__item--5">
+          <img src="img/logo.png" class="gallery__img" alt="Image 5">
+        </figure>
+        <figure class="gallery__item gallery__item--6">
+          <img src="img/logo.png" class="gallery__img" alt="Image 6">
+        </figure>
+      </div>
 
       <!----------------------------------------  End Content  ---------------------------------------->
     </div>
