--- a/leden.html
+++ b/leden.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Leden</title>
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/style.css"/>
+  <link rel="stylesheet" href="./css/Temp.css"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
@@ -52,34 +53,27 @@
 
   <!----------------------------------------  Begin content  ---------------------------------------->
   <div class="content">
-    <!----------------------------------------  Begin contact  ---------------------------------------->
-    <div class="contact">
       <!----------------------------------------  Begin Text-contact  ---------------------------------------->
 
-      <div class=”gallery”>
-        <figure class="gallery__item gallery__item--1">
-          <img src="img/logo.png" class="gallery__img" alt="Image 1">
-        </figure>
-        <figure class="gallery__item gallery__item--2">
-          <img src="img/logo.png" class="gallery__img" alt="Image 2">
-        </figure>
-        <figure class="gallery__item gallery__item--3">
-          <img src="img/logo.png" class="gallery__img" alt="Image 3">
-        </figure>
-        <figure class="gallery__item gallery__item--4">
-          <img src="img/logo.png" class="gallery__img" alt="Image 4">
-        </figure>
-        <figure class="gallery__item gallery__item--5">
-          <img src="img/logo.png" class="gallery__img" alt="Image 5">
-        </figure>
-        <figure class="gallery__item gallery__item--6">
-          <img src="img/logo.png" class="gallery__img" alt="Image 6">
-        </figure>
+      <div class="lid">
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
+        </div>
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
+        </div>
+        </div>
       </div>
 
       <!----------------------------------------  End Content  ---------------------------------------->
-    </div>
-    <!----------------------------------------  Start footer  ---------------------------------------->
+    
+      <!----------------------------------------  Start footer  ---------------------------------------->
     <footer class="footer">
       <div class="social-media">
         <h3>Social media</h3>
@@ -93,6 +87,7 @@
       <div class="links">
         <h3>Links</h3>
       </div>
+    </div>
     </footer>
 </body>
 
