--- a/word_lid.html
+++ b/word_lid.html
@@ -52,7 +52,7 @@
   <!----------------------------------------  End navigation  ---------------------------------------->
 
   <!----------------------------------------  Begin content  ---------------------------------------->
-  <div class="content">
+  <div class="content-word-lid">
     <!----------------------------------------  Begin contact  ---------------------------------------->
     <div class="word-lid-image">
       <img src="img/word-lid1.png" alt="image word-lid1" />	
