--- a/about.html
+++ b/about.html
@@ -50,11 +50,11 @@
     <!----------------------------------------  End navigation  ---------------------------------------->
 
     <!----------------------------------------  Begin content  ---------------------------------------->
-    <div class="content">
+    <div class="about-content">
       <!----------------------------------------  Begin about  ---------------------------------------->
       <div class="About1">
         <!----------------------------------------  Begin Text-about  ---------------------------------------->
-        <div class="Text">
+        <div class="Text2">
           <h1>About</h1>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec
           tempor orci. Sed tincidunt lacinia tempor. Mauris vulputate ultrices
@@ -72,7 +72,7 @@
           non viverra neque.
         </div>
         <!----------------------------------------  Begin Image-about  ---------------------------------------->
-        <img class="img-about" src="img/img_about.png" alt="Image about" />
+        <img class="img-about2" src="img/img_about.png" alt="Image about" />
       </div>
       <!----------------------------------------  End about  ---------------------------------------->
 
