--- a/nieuws.html
+++ b/nieuws.html
@@ -58,7 +58,15 @@
 
 
       <!----------------------------------------  End Content  ---------------------------------------->
+  
     </div>
+     <!----------------------------------------  Begin API  ---------------------------------------->
+     
+      <div class="api4">nieuws API
+        <script src="js/news.js"></script>
+      </div>      
+    
+    <!----------------------------------------  End API  ---------------------------------------->
     <!----------------------------------------  Start footer  ---------------------------------------->
     <footer class="footer">
       <div class="social-media">
