--- a/leden.html
+++ b/leden.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Leden</title>
-  <link rel="stylesheet" href="./css/style.css"/>
   <link rel="stylesheet" href="./css/Temp.css"/>
+  <link rel="stylesheet" href="./css/style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
@@ -52,7 +52,7 @@
   <!----------------------------------------  End navigation  ---------------------------------------->
 
   <!----------------------------------------  Begin content  ---------------------------------------->
-  <div class="content">
+  <div class="leden-content">
       <!----------------------------------------  Begin Text-contact  ---------------------------------------->
 
       <div class="lid">
@@ -89,6 +89,7 @@
       </div>
     </div>
     </footer>
+  </div>
 </body>
 
 </html>
