--- a/leden.html
+++ b/leden.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <title>Leden</title>
-  <link rel="stylesheet" href="./css/Temp.css"/>
   <link rel="stylesheet" href="./css/style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
@@ -52,7 +51,7 @@
   <!----------------------------------------  End navigation  ---------------------------------------->
 
   <!----------------------------------------  Begin content  ---------------------------------------->
-  <div class="leden-content">
+    <div class="leden-content">
       <!----------------------------------------  Begin Text-contact  ---------------------------------------->
 
       <div class="lid">
@@ -68,28 +67,56 @@
         </div>
         <div class="lid3">
         </div>
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
+        </div>
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
+        </div>
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
+        </div>
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
+        </div>
+        <div class="lid1">
+        </div>
+        <div class="lid2">
+        </div>
+        <div class="lid3">
         </div>
       </div>
+    </div>
 
       <!----------------------------------------  End Content  ---------------------------------------->
     
       <!----------------------------------------  Start footer  ---------------------------------------->
-    <footer class="footer">
-      <div class="social-media">
-        <h3>Social media</h3>
-      </div>
-      <div class="contact-footer">
-        <h3>Contact</h3>
-      </div>
-      <div class="locatie">
-        <h3>Locatie</h3>
-      </div>
-      <div class="links">
-        <h3>Links</h3>
-      </div>
+      <footer class="footer">
+        <div class="social-media">
+          <h3>Social media</h3>
+        </div>
+        <div class="contact-footer">
+          <h3>Contact</h3>
+        </div>
+        <div class="locatie">
+          <h3>Locatie</h3>
+        </div>
+        <div class="links">
+          <h3>Links</h3>
+        </div>
+      </footer>
     </div>
-    </footer>
-  </div>
-</body>
-
+  </body>
 </html>
