--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,16 @@
       <!--End container-->
     </div>
     <!--End content-->
+    
+    <!----------------------------------------  Start footer  ---------------------------------------->
+    <footer class="footer">
+      <ul class="social-links">
+        <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+        <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
+        <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+      </ul>
+    </footer>
+</body>
 
     <!----------------------------------------  Start footer  ---------------------------------------->
   </body>
