--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/unicons.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   </head>
 
@@ -95,18 +96,12 @@
 
       <!----------------------------------------  Start footer  ---------------------------------------->
       <footer class="footer">
-        <div class="social-media">
-          <h3>Social media</h3>
-        </div>
-        <div class="contact-footer">
-          <h3>Contact</h3>
-        </div>
-        <div class="locatie">
-          <h3>Locatie</h3>
-        </div>
-        <div class="links">
-          <h3>Links</h3>
-        </div>
+        <ul class="social-links">
+          <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+      
+          <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
+          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+        </ul>
       </footer>
     </div>
   </body>
