--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     <div class="content">
       <!----------------------------------------  Begin API  ---------------------------------------->
       <div class="API">
-        <div class="api1">nieuws
+        <div class="api1">
           <script src="js/news.js"></script>
         </div>
-        <div class="api2">community
-          <script src="js/community-customers.js"></script>
+        <div class="api2">
+          <!-- <script src="js/community-customers.js"></script> -->
         </div>
-        <div class="api3">bijeenkomsten
-          <script src="js/bijeenkomsten.js"></script>
+        <div class="api3">
+          <!-- <script src="js/bijeenkomsten.js"></script> -->
         </div>
       </div>
       <!----------------------------------------  End API  ---------------------------------------->
