--- a/about.html
+++ b/about.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8" />
     <title>Regitel</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   </head>
 
   <body>
     <!----------------------------------------  Begin navigation  ---------------------------------------->
     <div class="container">
       <nav class="navbar">
-        <input type="checkbox" id="nav-check">
+        <input type="checkbox" id="nav-check" />
         <div class="navbar-brand">
           <img class="logo" src="./img/logo.png" alt="logo" />
         </div>
@@ -81,9 +85,25 @@
       <!----------------------------------------  Start footer  ---------------------------------------->
       <footer class="footer">
         <ul class="social-links">
-          <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
-          <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
-          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+          <li>
+            <a href="https://twitter.com/regitel"
+              ><img
+                src="https://img.icons8.com/color/48/000000/twitter--v1.png"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/regitel2020/"
+              ><img
+                src="https://img.icons8.com/fluency/48/000000/instagram-new.png"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"
+              ><img
+                src="https://img.icons8.com/color/48/000000/youtube-play.png"
+            /></a>
+          </li>
         </ul>
       </footer>
     </div>
