--- a/nieuws.html
+++ b/nieuws.html
@@ -6,6 +6,7 @@
   <title>Nieuws</title>
   <link rel="stylesheet" href="./css/style.css" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 </head>
 
 <body>
@@ -51,7 +52,7 @@
   <!----------------------------------------  End navigation  ---------------------------------------->
 
   <!----------------------------------------  Begin content  ---------------------------------------->
-  <div class="content">
+  <div class="nieuws-content">
     <!----------------------------------------  Begin contact  ---------------------------------------->
      <!----------------------------------------  Begin API  ---------------------------------------->
      
