--- a/leden.html
+++ b/leden.html
@@ -58,46 +58,172 @@
 
       <div class="lid">
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid1">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid2">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
         <div class="lid3">
+          <div class="lid-logo">
+
+          </div>
+          <div class="lid-info">
+
+          </div>
         </div>
       </div>
     </div>
