--- a/nieuws.html
+++ b/nieuws.html
@@ -64,10 +64,23 @@
     <!----------------------------------------  Start footer  ---------------------------------------->
     <footer class="footer">
       <ul class="social-links">
+        <div class="social-media">
+          <h3>Social media</h3>
+        </div>
         <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+    
         <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
         <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
       </ul>
+      <div class="contact-footer">
+        <h3>Contact</h3>
+      </div>
+      <div class="locatie">
+        <h3>Locatie</h3>
+      </div>
+      <div class="links">
+        <h3>Links</h3>
+      </div>
     </footer>
 </body>
 
