--- a/testing.html
+++ b/testing.html
@@ -73,9 +73,15 @@
       <!--End context-box-->
       </div>
       <footer class="footer">
-        <div class="social-media">
-          <h3>Social media</h3>
-        </div>
+        <ul class="social-links">
+          <div class="social-media">
+            <h3>Social media</h3>
+          </div>
+          <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+      
+          <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
+          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+        </ul>
         <div class="contact-footer">
           <h3>Contact</h3>
         </div>
