--- a/leden.html
+++ b/leden.html
@@ -59,6 +59,7 @@
       <div class="lid">
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" size="10%">
 
           </div>
           <div class="lid-info">
