--- a/leden.html
+++ b/leden.html
@@ -59,26 +59,34 @@
       <div class="lid">
         <div class="lid1">
           <div class="lid-logo">
-            <img src="./img/11111111.png" size="10%">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h1>Vista College</h1>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h1>Vista College</h1>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h1>Vista College</h1>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
