--- a/leden.html
+++ b/leden.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 </head>
 
-<body>
+<body a link="white" vlink="white">
   <!----------------------------------------  Begin navigation  ---------------------------------------->
   <div class="container">
     <nav class="navbar">
@@ -243,12 +243,7 @@
       <footer class="footer">
         <ul class="social-links">
           <div class="social-media">
-            <h3>Social media</h3>
           </div>
-          <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
-      
-          <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
-          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
         </ul>
         <div class="contact-footer">
           <h3>Contact</h3>
@@ -258,6 +253,9 @@
         </div>
         <div class="links">
           <h3>Links</h3>
+          <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a><br>
+          <a href="https://www.instagram.com/regitel2020/">Instagram</a><br>
+          <a href="https://twitter.com/regitel">twitter</a>
         </div>
       </footer>
     </div>
