--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body a link="white" vlink="white">
   <!----------------------------------------  Begin navigation  ---------------------------------------->
   <div class="container">
     <nav class="navbar">
@@ -59,12 +59,7 @@
     <footer class="footer">
       <ul class="social-links">
         <div class="social-media">
-          <h3>Social media</h3>
         </div>
-        <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
-    
-        <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
-        <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
       </ul>
       <div class="contact-footer">
         <h3>Contact</h3>
@@ -74,6 +69,9 @@
       </div>
       <div class="links">
         <h3>Links</h3>
+        <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a><br>
+        <a href="https://www.instagram.com/regitel2020/">Instagram</a><br>
+        <a href="https://twitter.com/regitel">twitter</a>
       </div>
     </footer>
 </body>
