--- a/testing.html
+++ b/testing.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body a link="white" vlink="white">
   <!----------------------------------------  Begin navigation  ---------------------------------------->
   <div class="container">
     <nav class="navbar">
@@ -75,12 +75,7 @@
       <footer class="footer">
         <ul class="social-links">
           <div class="social-media">
-            <h3>Social media</h3>
           </div>
-          <li><a href="https://twitter.com/regitel"><img src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
-      
-          <li><a href="https://www.instagram.com/regitel2020/"><img src="https://img.icons8.com/fluency/48/000000/instagram-new.png"></a></li>
-          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
         </ul>
         <div class="contact-footer">
           <h3>Contact</h3>
@@ -90,6 +85,9 @@
         </div>
         <div class="links">
           <h3>Links</h3>
+          <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a><br>
+          <a href="https://www.instagram.com/regitel2020/">Instagram</a><br>
+          <a href="https://twitter.com/regitel">twitter</a>
         </div>
       </footer>
       <!--End container-->
