--- a/nieuws.html
+++ b/nieuws.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <title>Nieuws</title>
   <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/footerfix.css"/>
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 </head>
@@ -63,10 +64,6 @@
     <!----------------------------------------  End API  ---------------------------------------->
     <!----------------------------------------  Start footer  ---------------------------------------->
     <footer class="footer">
-      <ul class="social-links">
-        <div class="social-media">
-        </div>
-      </ul>
       <div class="contact-footer">
         <h3>Contact</h3>
       </div>
