--- a/word_lid.html
+++ b/word_lid.html
@@ -35,7 +35,7 @@
           <a class="link word_lid" href="word_lid.html">Word lid</a>
         </li>
         <li>
-          <a class="link login" href="login.html">Login</a>
+          <a class="link login" href="https://bundeling.com/en/">Login</a>
         </li>
       </ul>
       <!----------------------------------------  hamburger  ---------------------------------------->
