--- a/index.html
+++ b/index.html
@@ -72,20 +72,9 @@
         <!----------------------------------------  Begin Text-about  ---------------------------------------->
         <div class="Text">
           <h2 class="about">About</h2>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec
-          tempor orci. Sed tincidunt lacinia tempor. Mauris vulputate ultrices
-          felis ut gravida. Proin volutpat, dui vitae hendrerit rutrum, ex dolor
-          tincidunt nibh, commodo pellentesque mi quam non massa. Mauris at
-          blandit est, et pellentesque ante. Praesent vel gravida lorem, et
-          rutrum ligula. Quisque eu egestas odio, id gravida nisl. Morbi
-          pulvinar consequat mi non sodales. Vivamus fringilla non eros in
-          dapibus. Cras vestibulum ligula feugiat velit pretium, nec elementum
-          nulla lobortis. Vivamus congue mauris efficitur semper volutpat.
-          Mauris lobortis vestibulum felis sit amet pellentesque. Orci varius
-          natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-          mus. Donec euismod sodales tortor, id scelerisque magna vulputate a.
-          Praesent a imperdiet quam. Vivamus ac finibus orci, ac porta sem. Sed
-          non viverra neque.
+          ICT-ondernemers en kennisinstellingen op het gebied van IT, Telecom & Media in Limburg hebben zich verenigd in Regitel. Regitel behartigt de belangen van haar leden, zorgt voor overleg en is klankbord voor bedrijfsoverstijgende vragen en activiteiten. REGITEL slaat bruggen tussen bedrijfsleven, kennissector, overheden en verwante verenigingen in aangrenzende regio's. Zo'n vijf keer per jaar worden er ledenbijeenkomsten georganiseerd. Dit kunnen zowel brainstormsessies als excursies en studiereizen en seminars met gastsprekers zijn. REGITEL is opgericht op 22 maart 1996 op initiatief van industriebank LIOF.
+
+
         </div>
         <!----------------------------------------  Begin Image-about  ---------------------------------------->
         <img class="img-about" src="img/img_about.png" alt="Image about" />
