--- a/nieuws.html
+++ b/nieuws.html
@@ -66,15 +66,16 @@
     <footer class="footer">
       <div class="contact-footer">
         <h3>Contact</h3>
+        <a href="mailto:Regitel@gmail.com">Regitel@gmail.com</a>
       </div>
       <div class="locatie">
         <h3>Locatie</h3>
       </div>
       <div class="links">
         <h3>Links</h3>
-        <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a><br>
-        <a href="https://www.instagram.com/regitel2020/">Instagram</a><br>
-        <a href="https://twitter.com/regitel">twitter</a>
+        <button class="youtube"><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a></button><br>
+        <button class="instagram"><a href="https://www.instagram.com/regitel2020/">Instagram</a></button><br>
+        <button class="twitter"><a href="https://twitter.com/regitel">twitter</a></button>
       </div>
     </footer>
 </body>
