--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         </div>
         <div class="links">
           <h3>Links</h3>
-          <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a><br>
-          <a href="https://www.instagram.com/regitel2020/">Instagram</a><br>
-          <a href="https://twitter.com/regitel">twitter</a>
+          <button class="youtube"><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a></button><br>
+          <button class="instagram"><a href="https://www.instagram.com/regitel2020/">Instagram</a></button><br>
+          <button class="twitter"><a href="https://twitter.com/regitel">twitter</a></button>
         </div>
       </footer>
     </div>
