--- a/leden.html
+++ b/leden.html
@@ -237,9 +237,9 @@
         </div>
         <div class="links">
           <h3>Links</h3>
-          <button class="youtube"><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a></button><br>
-          <button class="instagram"><a href="https://www.instagram.com/regitel2020/">Instagram</a></button><br>
-          <button class="twitter"><a href="https://twitter.com/regitel">twitter</a></button>
+          <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a></button><br>
+          <a href="https://www.instagram.com/regitel2020/">Instagram</a></button><br>
+          <a href="https://twitter.com/regitel">twitter</a></button>
         </div>
       </footer>
     </div>
