--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/unicons.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="popup/style2.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   </head>
 
@@ -100,6 +101,30 @@
         </div>
       </footer>
     </div>
+    <!-- Popup -->
+    <body2>
+
+      <div class="login-popup">
+         <div class="box">
+            <div class="img-area">
+              <div class="img">
+              </div>
+              
+            </div>
+            <div class="form">
+              <div class="close">&times;</div>
+              <h1>Heeft u interesse om lid te worden?</h1>
+              <a href="word_lid.html">
+                <button type="button" class="btn">Klik Hier!</button>
+              </a>
+              </form>
+            </div>
+         </div>
+      </div>
+    
+    <script src="./popup/script.js"></script>
+    </body2>
+    <!--End popup-->
   </body>
 </html>
 <!--
