Leden -> community veranderd

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
           <li class="active"><a class="link home" href="index.html">Home</a></li>
           <li>
-            <a class="link leden" href="leden.html">Leden</a>
+            <a class="link leden" href="leden.html">Community</a>
           </li>
           <li>
             <a class="link nieuws" href="nieuws.html">Nieuws</a>
