--- a/leden.html
+++ b/leden.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Leden</title>
+  <title>Community</title>
   <link rel="stylesheet" href="./css/style.css"/>
   <link rel="stylesheet" href="./css/footerfix.css"/>
   <link rel="stylesheet" href="popup/style2.css">
@@ -22,7 +22,7 @@
       <ul>
         <li><a class="link home" href="index.html">Home</a></li>
         <li class="active">
-          <a class="link leden" href="leden.html">Leden</a>
+          <a class="link leden" href="leden.html">Community</a>
         </li>
         <li>
           <a class="link nieuws" href="nieuws.html">Nieuws</a>
