--- a/leden.html
+++ b/leden.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a class="link home" href="index.html">Home</a></li>
         <li class="active">
-          <a class="link leden" href="leden.html">Community</a>
+          <a class="link leden" href="leden.html">Leden</a>
         </li>
         <li>
           <a class="link nieuws" href="nieuws.html">Nieuws</a>
