--- a/testing.html
+++ b/testing.html
@@ -21,7 +21,7 @@
       <ul>
         <li><a class="link home" href="index.html">Home</a></li>
         <li>
-          <a class="link leden" href="leden.html">Community</a>
+          <a class="link leden" href="leden.html">Leden</a>
         </li>
         <li>
           <a class="link nieuws" href="nieuws.html">Nieuws</a>
