--- a/leden.html
+++ b/leden.html
@@ -34,10 +34,10 @@
           <a class="link contact" href="./contact.html">Contact</a>
         </li>
         <li>
-          <a class="link word_lid" href="word_lid.html">Word lid</a>
+          <a class="link word_lid" href="word_lid.html"><h4>Word Lid</h4></a>
         </li>
         <li>
-          <a class="link login" href="https://bundeling.com/en/">Login</a>
+          <a class="link login" href="https://bundeling.com/en/"><h4>Login</h4></a>
         </li>
       </ul>
       <!----------------------------------------  hamburger  ---------------------------------------->
@@ -257,7 +257,7 @@
                 </div>
                 <div class="form">
                   <div class="close">&times;</div>
-                  <h1>Heeft u interesse om lid te worden?</h1>
+                  <h1>Heeft u interesse om lid te worden bij Regitel?</h1>
                   <a href="word_lid.html">
                     <button type="button" class="btn">Klik Hier!</button>
                   </a>
