--- a/popup/index1.html
+++ b/popup/index1.html
@@ -18,7 +18,7 @@
   	 	 </div>
   	 	 <div class="form">
   	 	 	<div class="close">&times;</div>
-  	 	 	<h1>Heeft u interesse om lid te worden?</h1>
+  	 	 	<h1>Heeft u interesse om lid te worden bij Regitel?</h1>
   	 	 		<button type="button" class="btn">Klik Hier!</button>
   	 	 	</form>
   	 	 </div>
