--- a/word_lid.html
+++ b/word_lid.html
@@ -30,13 +30,12 @@
         </li>
         <li>
           <a class="link contact" href="./contact.html">Contact</a>
-        </li>
-        <li class="active">
-          <a class="link word_lid" href="word_lid.html">Word lid</a>
-        </li>
-        <li>
-          <a class="link login" href="https://bundeling.com/en/">Login</a>
-        </li>
+          <li>
+            <a class="link word_lid" href="word_lid.html"><h4>Word Lid</h4></a>
+          </li>
+          <li>
+            <a class="link login" href="https://bundeling.com/en/"><h4>Login</h4></a>
+          </li>
       </ul>
       <!----------------------------------------  hamburger  ---------------------------------------->
       <div class="nav-btn">
