--- a/testing.html
+++ b/testing.html
@@ -33,10 +33,10 @@
           <a class="link contact" href="./contact.html">Contact</a>
         </li>
         <li>
-          <a class="link word_lid" href="word_lid.html">Word lid</a>
+          <a class="link word_lid" href="word_lid.html"><h4>Word Lid</h4></a>
         </li>
         <li>
-          <a class="link login" href="login.html">Login</a>
+          <a class="link login" href="https://bundeling.com/en/"><h4>Login</h4></a>
         </li>
       </ul>
       <!----------------------------------------  hamburger  ---------------------------------------->
