Image fix PLEASE UWUW IVAN

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
       <!--Begin context-box-->
       <div class="context-box">
         <div class="left">
-          <img src="img/bg.png" alt="bg.png">
+          <img class="img-about3" src="img/Fotos/1.jpg" alt="Image about" />
         </div>
         <div class="right">
           <form onsubmit="sendEmail(); reset(); return false;">
