--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <div class="API">
         <div class="api1">
           <script src="js/news.js"></script>
+          Write()
         </div>
         <div class="api2">
           <!-- <script src="js/community-customers.js"></script> -->
@@ -78,7 +79,7 @@
 
         </div>
         <!----------------------------------------  Begin Image-about  ---------------------------------------->
-        <img class="img-about" src="img/img_about.png" alt="Image about" />
+        <img class="img-about" src="img/Fotos/4.jpg" alt="Image about" />
       </div>
       <!----------------------------------------  End about  ---------------------------------------->
 
