--- a/word_lid.html
+++ b/word_lid.html
@@ -53,12 +53,12 @@
   <!----------------------------------------  Begin content  ---------------------------------------->
   <div class="content-word-lid">
     <!----------------------------------------  Begin contact  ---------------------------------------->
-    <div class="word-lid-image">
-      <img src="img/word-lid1.png" alt="image word-lid1" />	
+    <div class="word-lid-1">
+      <img src="img/Fotos/4.jpg" alt="image word-lid1" class="word-lid-image"/>	
       
     </div>
-    <div class="word-lid-image2">
-      <img src="img/word-lid2.png" alt="image word-lid2" />	
+    <div class="word-lid-2">
+      <img src="img/Fotos/6.jpg" alt="image word-lid2" class="word-lid-image2"/>	
       
     </div>
     <div class="word-lid-info">
