--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
         </div>
         <!----------------------------------------  Begin Image-about  ---------------------------------------->
-        <img class="img-about2" src="img/img_about.png" alt="Image about" />
+        <img class="img-about2" src="img/Fotos/5.jpg" alt="Image about" />
         <div class="Text3">
           <h1>Organisatie</h1>
           Organisatie
