--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!----------------------------------------  Begin API  ---------------------------------------->
     <div class="API">
       <div class="api1">
-        <script src="js/news.js"></script>
+        <!--<script src="js/news.js"></script> --->
         <script src="js/admin.js"></script>
         Write()
       </div>
