--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
         <script src="js/admin.js"></script>
 
       </div>
-      <div class="api2">
+      <div class="api2" id="api2">
+        <script src="js/bijeenkomsten.js"></script>
         <!-- <script src="js/community-customers.js"></script> -->
       </div>
-      <div class="api3">
+      <div class="api3" id="ap3">
+        <script src="js/community-users.js"></script>
         <!-- <script src="js/bijeenkomsten.js"></script> -->
       </div>
     </div>
