--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!----------------------------------------  Begin API  ---------------------------------------->
     <div class="API">
       <div class="api1" id="api1">
-        <script src="js/admin.js"></script>
+        <script src="js/news.js"></script>
 
       </div>
       <div class="api2" id="api2">
