--- a/index.html
+++ b/index.html
@@ -69,11 +69,19 @@
     <div class="API">
       <div class="api1" id="api1">
         <script src="js/news.js"></script>
-
+        <div>
+          <h1 id="title"></h1>
+          <p id="description"></p>
+        </div>
       </div>
       <div class="api2" id="api2">
         <script src="js/bijeenkomsten.js"></script>
-
+        <div>
+          <h1 id="title1"></h1>
+          <p id="description1"></p>
+          </br>
+          <p id="date1"></p>
+        </div>
       </div>
       <div class="api3" id="ap3">
         <script src="js/community-users.js"></script>
@@ -90,7 +98,8 @@
         ICT-ondernemers en kennisinstellingen op het gebied van IT, Telecom & Media in Limburg hebben zich verenigd in
         Regitel. Regitel behartigt de belangen van haar leden, zorgt voor overleg en is klankbord voor
         bedrijfsoverstijgende vragen en activiteiten. REGITEL slaat bruggen tussen bedrijfsleven, kennissector,
-        overheden en verwante verenigingen in aangrenzende regio's. Zo'n vijf keer per jaar worden er ledenbijeenkomsten
+        overheden en verwante verenigingen in aangrenzende regio's. Zo'n vijf keer per jaar worden er
+        ledenbijeenkomsten
         georganiseerd. Dit kunnen zowel brainstormsessies als excursies en studiereizen en seminars met gastsprekers
         zijn. REGITEL is opgericht op 22 maart 1996 op initiatief van industriebank LIOF.
       </div>
