update to receive latest news

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
       </div>
       <div class="api3" id="ap3">
+        <script src="js/jquery-3.6.1.min.js"></script>
         <script src="js/community-users.js"></script>
 
       </div>
